<resources>
    <string name="app_name">Tanjore</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">Registration Activity</string>
    <string name="title_activity_report_incident">Report Incident</string>
    <string name="title_activity_safety_tips">Safety Tips</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email (Optional)</string>
    <string name="login">Login</string>
    <string name="report">Report</string>
    <string name="report_by_gps_location">By GPS Location</string>
    <string name="report_by_address">By Address</string>
    <string name="pick_location">Pick Location</string>
    <string name="address">Address</string>
    <string name="sastra_university_thirumalaisamudram_tanjore">SASTRA UNIVERSITY Thirumalaisamudram, Tanjore.</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="description">Description</string>
    <string name="location_permission_message">Enable location permissions first</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="tanjore_disaster_complaining">Tanjore Disaster Complaining Portal</string>
    <string name="title_activity_incident_details">Incident Details</string>
    <string name="edit_account">Edit Account</string>
    <string name="incident_type"><u>Incident Type</u></string>
    <string name="date"><u>Date</u></string>
    <string name="time"><u>Time</u></string>
    <string name="description_underlined"><u>Description</u></string>
    <string name="location_underlined"><u>Location</u></string>
    <string name="action_status_underlined"><u>Action Status</u></string>
    <string name="date_and_time_of_action_underlined"><u>Date and Time of Action</u></string>
</resources>
