<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.RegistrationActivity"
    android:background="@color/colorPrimaryLight"
    tools:showIn="@layout/activity_registration">

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"/>


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        app:cardElevation="16dp"
        app:cardBackgroundColor="#fff"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="4dp"
        app:layout_constraintTop_toTopOf="@id/horizontal_middle"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_middle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    
                    android:fontFamily="sans-serif-smallcaps"
                    style="@style/Base.TextAppearance.AppCompat.Display1"
                    android:id="@+id/tv_create_account"

                    android:textColor="@color/colorAccent"
                    android:text="@string/create_account"
                    android:textSize="28sp"
                    android:padding="4dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginEnd="28dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>


                  <View
                      android:id="@+id/view_above_btn_create_account"
                      app:layout_constraintTop_toBottomOf="@id/tv_create_account"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      android:layout_width="match_parent"
                      android:layout_height="1dp"
                      android:background="@color/colorPrimaryLight"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/name"
                    android:textColorHint="@color/hint_txt_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_create_account">

                    <EditText
                        android:id="@+id/et_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:fontFamily="monospace"
                        android:textColor="#000000" />

                </android.support.design.widget.TextInputLayout>


                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/textInput_name"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_name">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="135dp" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/rb_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/other" />
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="56dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/hint_txt_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                    <EditText
                        android:id="@+id/et_phoneNumber"
                        android:layout_width="match_parent"
                        android:fontFamily="monospace"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textColor="#000000" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="56dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/hint_txt_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_phoneNumber">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:fontFamily="monospace"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#000000" />

                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:baselineAligned="true"
                    android:hint="@string/email"
                    android:textColorHint="@color/hint_txt_color"
                    app:layout_constraintTop_toBottomOf="@+id/textInput_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:inputType="textEmailAddress"
                        android:textColor="#000000" />

                </android.support.design.widget.TextInputLayout>
                
                <Button
                    android:id="@+id/btn_create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@drawable/ripple_effect"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/sign_up"
                    android:textSize="28sp"
                    android:onClick="onClickSignUp"

                    android:layout_marginTop="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:elevation="@dimen/cardview_compat_inset_shadow"

                    app:layout_constraintTop_toBottomOf="@id/textInput_email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>