<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.IncidentDetails"
    tools:showIn="@layout/activity_incident_details">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_incidentType_head"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"

            android:fontFamily="sans-serif"
            android:padding="4dp"
            android:text="@string/incident_type"

            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_incidentType"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"

        android:text="Accident"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_incidentType_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_incidentType_head" />

    <TextView
        android:id="@+id/tv_date_head"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:text="@string/date"

        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_incidentType_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_incidentType" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"


        android:fontFamily="sans-serif"
        android:text="12-08-2018"
        app:layout_constraintStart_toStartOf="@+id/tv_date_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_head" />

        <TextView
            android:id="@+id/tv_time_head"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"

            android:padding="4dp"
            android:text="@string/time"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_date_head"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_time"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"

        android:fontFamily="sans-serif"
        android:text="11:29 AM"
        app:layout_constraintStart_toStartOf="@+id/tv_time_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_head" />

    <TextView
        android:id="@+id/tv_desp_head"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:text="@string/description_underlined"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@+id/tv_time_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_time" />

    <TextView
        android:id="@+id/tv_desp"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"

        android:fontFamily="sans-serif"
        android:text="Car and Bus dashed each other"
        app:layout_constraintStart_toStartOf="@+id/tv_desp_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_desp_head" />

    <TextView
        android:id="@+id/tv_location_head"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"

        android:padding="4dp"
        android:text="@string/location_underlined"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_desp_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_desp" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="XXXXXXXXXXXX"
        app:layout_constraintStart_toStartOf="@+id/tv_location_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_head" />

    <TextView
        android:id="@+id/tv_action_status_head"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"

        android:padding="4dp"
        android:text="@string/action_status_underlined"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_location_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_action_status"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="Done"
        app:layout_constraintStart_toStartOf="@+id/tv_action_status_head"
        app:layout_constraintTop_toBottomOf="@+id/tv_action_status_head" />

    <TextView
        android:id="@+id/tv_action_date_time_action_head"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:text="@string/date_and_time_of_action_underlined"

        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@id/tv_action_status_head"
        app:layout_constraintTop_toBottomOf="@id/tv_action_status"/>

        <TextView
            android:id="@+id/tv_action_date_time_action"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="4dp"

            android:fontFamily="sans-serif"
            android:text="12-08-2018, 12:00PM"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_action_date_time_action_head"
            app:layout_constraintTop_toBottomOf="@+id/tv_action_date_time_action_head" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>