<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="36dp">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_district"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/ripple_rounded_primary_dark"

            android:layout_marginTop="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_goneMarginTop="16dp"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_taluk"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/ripple_rounded_primary_dark"

            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="16dp"

            app:layout_constraintTop_toBottomOf="@id/spinner_district"
            app:layout_constraintStart_toStartOf="@id/spinner_district"
            app:layout_constraintEnd_toEndOf="@id/spinner_district"/>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_marginTop="12dp"
            android:id="@+id/spinner_village"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_goneMarginTop="16dp"
            android:background="@drawable/ripple_rounded_primary_dark"

            app:layout_constraintTop_toBottomOf="@id/spinner_taluk"
            app:layout_constraintStart_toStartOf="@id/spinner_taluk"
            app:layout_constraintEnd_toEndOf="@id/spinner_taluk"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_address1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:hint="@string/address_1"
            android:textColorHint="@color/hint_txt_color"
            app:layout_constraintTop_toBottomOf="@id/spinner_village"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/et_address1"
                android:layout_width="match_parent"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:hint="@string/address_2"
            android:textColorHint="@color/hint_txt_color"
            app:layout_constraintTop_toBottomOf="@id/textInput_address1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/et_address2"
                android:layout_width="match_parent"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_desp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:hint="@string/description"
            android:textColorHint="@color/hint_txt_color"
            app:layout_constraintTop_toBottomOf="@id/textInput_address2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/editText_Desp"
                android:layout_width="match_parent"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="#000000" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report"

            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"

            android:background="@drawable/ripple_rounded_primary_dark"

            app:layout_constraintTop_toBottomOf="@id/textInput_desp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>